--- a/24일차/ex24-02.html
+++ b/24일차/ex24-02.html
@@ -124,7 +124,7 @@
 
       <div class="chat-input">
         <textarea name="" id="" placeholder="메시지를 입력하세요"></textarea
-        ><button id="send-btn">테스트</button>
+        ><button id="send-btn">테스트2</button>
       </div>
     </div>
   </body>
